Fix scrollbar dark mode styling

--- a/src/index.css
+++ b/src/index.css
@@ -97,13 +97,13 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  @apply bg-gray-200 dark:bg-dark-300;
+  @apply bg-gray-100 dark:bg-dark-300;
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-primary-900 rounded-full;
+  @apply bg-gray-300 dark:bg-dark-100 rounded-full;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  @apply bg-primary-800;
+  @apply bg-gray-400 dark:bg-dark-200;
 }
